--- a/arabic_services.html
+++ b/arabic_services.html
@@ -355,7 +355,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -387,7 +387,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -420,7 +420,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -456,7 +456,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -488,7 +488,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -521,7 +521,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -557,7 +557,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -589,7 +589,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -622,7 +622,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -658,7 +658,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -690,7 +690,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -723,7 +723,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
