--- a/english_services.html
+++ b/english_services.html
@@ -356,7 +356,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -388,7 +388,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -421,7 +421,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -457,7 +457,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -489,7 +489,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -522,7 +522,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -558,7 +558,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -590,7 +590,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -623,7 +623,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -659,7 +659,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -691,7 +691,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
@@ -724,7 +724,7 @@
                                             <p><span>(4.5)</span> based on 120</p> -->
                                         </div>
                                         <div class="price">
-                                            <h3 class="pricing-price"><sup>$</sup><sub>200/mo*</sub></h3>
+                                            <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                         </div> 
                                     </div>
                                     <!-- <a href="#" class="border-btn border-btn2">ARCHIVES</a> -->
