--- a/archives.html
+++ b/archives.html
@@ -323,6 +323,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                            <h2>MAANDEEQ</h2>
                             <h2>ARABIC</h2>
                             <h2>ARCHIVES</h2>
                         </div>
@@ -760,6 +761,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                             <h2>MAANDEEQ</h2>
                              <h2>ENGLISH</h2>
                             <h2>ARCHIVES</h2>
                         </div>
