--- a/arabic_archives.html
+++ b/arabic_archives.html
@@ -143,7 +143,7 @@
                 </div>
             </div>
         </section>
-        <!-- ? services-area -->
+        <!-- ? services-area 
         <div class="services-area">
             <div class="container">
                 <div class="row justify-content-sm-center">
@@ -313,7 +313,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Courses area start -->
 
        
@@ -324,6 +324,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                            <h2>MAANDEEQ</h2>
                             <h2>ARABIC</h2>
                             <h2>DOWNLOADS</h2>
                         </div>
@@ -731,6 +732,7 @@
                     </div>
                 </div> -->
             </div>
+
         </div>
 
 
