--- a/english_archives.html
+++ b/english_archives.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </section>
-        <!-- ? services-area -->
+        <!-- ? services-area 
         <div class="services-area">
             <div class="container">
                 <div class="row justify-content-sm-center">
@@ -312,7 +312,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Courses area start -->
 
        
@@ -323,6 +323,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                             <h2>MAANDEEQ</h2>
                              <h2>ENGLISH</h2>
                             <h2>DOWNLOADS</h2>
                         </div>
@@ -730,6 +731,7 @@
                     </div>
                 </div> -->
             </div>
+
         </div>
 
 
