--- a/exams.html
+++ b/exams.html
@@ -2534,7 +2534,7 @@
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
                                 <th>MODULE</th>
-                                <th>TIME</th>
+                                <th>LANGUAGE</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -3002,7 +3002,7 @@
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
                                 <th>MODULE</th>
-                                <th>TIME</th>
+                                <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
                     </table>
