--- a/english_exams.html
+++ b/english_exams.html
@@ -2995,12 +2995,12 @@
                         </tbody>
                        <tfoot>
                             <tr>
-                                <th>INSTITUTION</th>
+                                 <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
                                 <th>MODULE</th>
-                                <th>TIME</th>
+                                <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
                     </table>
