--- a/english_systems.html
+++ b/english_systems.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </section>
-        <!-- ? services-area -->
+        <!-- ? services-area
         <div class="services-area">
             <div class="container">
                 <div class="row justify-content-sm-center">
@@ -314,7 +314,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>   -->
         <!-- Courses area start -->
 
           <div class="courses-area section-padding40 fix">
