--- a/arabic_home.html
+++ b/arabic_home.html
@@ -326,7 +326,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>ARABIC</h2>
-                              <h2>PROJECT</h2>
+                              <h2>PLATFORM</h2>
                               <h2>APPLICATIONS</h2>
                         </div>
                     </div>
@@ -2521,11 +2521,11 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                                <th>INSTITUTION</th>
+                              <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -2989,11 +2989,11 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>INSTITUTION</th>
+                              <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
@@ -3035,18 +3035,22 @@
                                    </div>
                                    <div class="footer-tittle">
                                        <div class="footer-pera">
-                                           <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
-                                               ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                        <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
+                                               In today’s fast-paced digital age, educational institutions are evolving rapidly to 
+                                               meet the demands of efficient administration and seamless communication. One transformative 
+                                               solution is the adoption of cloud-based school management systems. These systems offer an integrated 
+                                               platform to manage student records, attendance, grades, communication, and much more enhancing efficiency,
+                                               security, and accessibility.
                                            </p>
                                        </div>
                                    </div>
                                    <!-- social -->
                                    <div class="footer-social">
-                                       <a href="#"><i class="fab fa-youtube"></i></a>
-                                       <a href="#"><i class="fab fa-facebook"></i></a>
-                                       <a href="#"><i class="fab fa-github"></i></a>
-                                       <a href="#"><i class="fab fa-telegram"></i></a>
-                                       <a href="#"><i class="fab fa-whatsapp"></i></a>
+                                       <a href="https://www.youtube.com/@ibrahimsiciidjamac" target="_blank" ><i class="fab fa-youtube"></i></a>
+                                       <a href="https://www.facebook.com/share/1G1yuFcnfT/?mibextid=qi2Omg" target="_blank" ><i class="fab fa-facebook"></i></a>
+                                       <a href="https://github.com/softwarepioneers" target="_blank" ><i class="fab fa-github"></i></a>
+                                       <a href="https://t.me/ibrahimSiciid" target="_blank"><i class="fab fa-telegram"></i></a>
+                                       <a href="https://chat.whatsapp.com/BifDArdCmG8Khg6dgIFUYq" target="_blank" ><i class="fab fa-whatsapp"></i></a>
                                    </div>
                                </div>
                            </div>
@@ -3056,6 +3060,8 @@
                                <div class="footer-tittle">
                                    <h4>SCHOOLS</h4>
                                    <ul> 
+                                       <li><a href="schools.contracts.html">CONTRACTS</a></li>
+                                       <li><a href="schools.platforms.html">PLATFORMS</a></li>
                                        <li><a href="schools.examinations.html">EXAMINATIONS</a></li>
                                        <li><a href="schools.systems.html">SYSTEMS</a></li>
                                        <li><a href="schools_services.html">SERVICES</a></li>
@@ -3073,6 +3079,8 @@
                                <div class="footer-tittle">
                                    <h4>INSTITUTES</h4>
                                    <ul> 
+                                       <li><a href="institutes.contracts.html">CONTRACTS</a></li>
+                                       <li><a href="institutes.platforms.html">PLATFORMS</a></li>
                                        <li><a href="institutes.examinations.html">EXAMINATIONS</a></li>
                                        <li><a href="institutes.systems.html">SYSTEMS</a></li>
                                        <li><a href="institutes_services.html">SERVICES</a></li>
@@ -3090,6 +3098,8 @@
                                <div class="footer-tittle">
                                    <h4>UNIVERSITIES</h4>
                                    <ul> 
+                                       <li><a href="universities.contracts.html">CONTRACTS</a></li>
+                                       <li><a href="universities.platforms.html">PLATFORMS</a></li>
                                        <li><a href="universities.examinations.html">EXAMINATIONS</a></li>
                                        <li><a href="universities.systems.html">SYSTEMS</a></li>
                                        <li><a href="universities_services.html">SERVICES</a></li>
