--- a/arabic_home.html
+++ b/arabic_home.html
@@ -71,7 +71,7 @@
                                                 <li><a href="exams.html">EXAMINATIONS</a>
                                                     <ul class="submenu">
                                                         <li><a href="exams.html">MAANDEEQ EXAMINATIONS</a></li>
-                                                        <li><a href="arabic_exams.html">ARABIC EXAMINATIONS</a></li>
+                                                        <li><a href="arabic_exams.html">ARABIC PRODUCTS</a></li>
                                                         <li><a href="english_exams.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
@@ -1201,7 +1201,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1234,7 +1234,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1266,7 +1266,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1299,7 +1299,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1332,7 +1332,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1365,7 +1365,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1397,7 +1397,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1430,7 +1430,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1462,7 +1462,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1495,7 +1495,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1527,7 +1527,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1560,7 +1560,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1592,7 +1592,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC SERVICES</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2081,7 +2081,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2114,7 +2114,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2146,7 +2146,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2179,7 +2179,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2212,7 +2212,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2245,7 +2245,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2277,7 +2277,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2310,7 +2310,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2342,7 +2342,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2375,7 +2375,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2407,7 +2407,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2440,7 +2440,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2472,7 +2472,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>ARABIC EXAMINATIONS</p>
+                                <p>ARABIC PRODUCTS</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
