--- a/english_home.html
+++ b/english_home.html
@@ -325,7 +325,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>ENGLISH</h2>
-                              <h2>PROJECT</h2>
+                              <h2>PLATFORM</h2>
                               <h2>APPLICATIONS</h2>
                         </div>
                     </div>
