--- a/arabic_home.html
+++ b/arabic_home.html
@@ -749,7 +749,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>EDUCATIONAL</h2>
                             <h2>APPLICATIONS</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -1189,7 +1189,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>EXAMINATIONAL</h2>
                             <h2>APPLICATIONS</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -1631,7 +1631,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>EDUCATIONAL</h2>
                             <h2>APPLICATIONS</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>PRODUCTS</h2>
                         </div>
                     </div>
                 </div>
@@ -2069,7 +2069,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>EXAMINATIONAL</h2>
                             <h2>APPLICATIONS</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>PRODUCTS</h2>
                         </div>
                     </div>
                 </div>
